[gd_scene load_steps=3 format=3 uid="uid://b6g6iwafolvqs"]

[ext_resource type="Script" uid="uid://73j5rt5n88de" path="res://addons/ExtraUIControls/pagination.gd" id="1_ql80f"]

[sub_resource type="Texture2DRD" id="Texture2DRD_ql80f"]

[node name="Pagination" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ql80f")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="go_to_first_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_type_variation = &"pagination_button"
text = "<<"
icon = SubResource("Texture2DRD_ql80f")

[node name="go_to_previous_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_type_variation = &"pagination_button"
text = "<"

[node name="pagination_hbox" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="go_to_next_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_type_variation = &"pagination_button"
text = ">"

[node name="go_to_last_button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_type_variation = &"pagination_button"
text = ">>"
